--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,10 +10,12 @@ $light-color: #fafafa;
 $border-color: #e0e0e0;
 $alert-color: #c00;
 $star-color: #fcb851;
-$rate-excellent: #72b244;
-$rate-good: #fab424;
-$rate-poor: #f84717;
 
+$rate-excellent: #72b244;
+$rate-good: #72b244;
+$rate-average: #fab424;
+$rate-poor: #f84717;
+$rate-bad: #f84717;
 
 //--------------------------------------------------
 // Media Query
