--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@
 @import "scss/typography";
 @import "scss/buttons";
 @import "scss/form";
+@import "scss/tables";
 @import "scss/calendar";
 @import "scss/accordion";
 @import "scss/serp";
