--- a/src/app/pages/serp/serp-item.component.html
+++ b/src/app/pages/serp/serp-item.component.html
@@ -5,7 +5,7 @@
 		<div class="discount" *ngIf="item.overlayCoverImage">
 			<img alt="" _src="item.overlayCoverImage | asset" [attr.data-src]="item.overlayCoverImage | asset">
 		</div>
-		<a [routerLink]="['hotel', item.id, item.slug] | route">
+		<a [routerLink]="['villaggio_elisena_5']| route">
 			<img alt="" class="image-thumb" _src="item.photo | asset" [attr.data-src]="item.photo | asset">
 		</a>
 	</div>
@@ -15,7 +15,7 @@
 		<div class="head">
 			<div class="info">
 				<div class="name">
-					<a [routerLink]="['hotel', item.id, item.slug] | route">
+					<a [routerLink]="['villaggio_elisena_5']| route">
 						<span>{{item.name}}</span> <span class="stars"><em *ngFor="let star of item?.rating?.split('');" [ngClass]="{ superior: star === 'S' }">{{star}}</em></span>
 					</a>
 				</div>
@@ -23,9 +23,12 @@
 					<span class="region">{{item.destinationNation}} {{item.destinationRegion}}</span>&nbsp;<span class="town">{{item.destinationDescription}} {{item.destinationProvince}}</span>
 				</div>
 			</div>
-			<div class="hotel-trust">
-				<span class="number excellent">8.7<!-- {{item.trustPilot_averageStars}} --></span>
-				<span class="text excellent">Eccellente<!-- {{item.trustPilot_nReviews}} --></span>
+			<ng-container *ngIf="item.trustPilot">
+				<div [trustPilot]="item.trustPilot"></div>
+			</ng-container>
+			<div class="hotel-trust excellent">
+				<span class="number">8.7<!-- {{item.trustPilot_averageStars}} --></span>
+				<span class="text">Eccellente<!-- {{item.trustPilot_nReviews}} --></span>
 			</div>
 			<button type="button" class="add-to-fav">
 				<svg class="ico">
@@ -98,7 +101,7 @@
 			</div>
 		</div>
 		<div class="cta">
-			<a class="btn" [routerLink]="['hotel', item.id, item.slug] | route">Continua</a>
+			<a class="btn" [routerLink]="['villaggio_elisena_5'] | route">Continua</a>
 		</div>
 	</div>
 	<!-- /Hotel Action -->
