--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -152,39 +152,6 @@ sup {
 	top: -.5em;
 }
 
-a {
-	color: $tertiary-color;
-	text-decoration: none;
-	background-color: transparent;
-	-webkit-text-decoration-skip: objects;
-}
-
-a:hover {
-	color: $tertiary-color;
-	text-decoration: underline;
-}
-
-a:not([href]):not([tabindex]) {
-	color: inherit;
-	text-decoration: none;
-}
-
-a:not([href]):not([tabindex]):hover,
-a:not([href]):not([tabindex]):focus {
-	color: inherit;
-	text-decoration: none;
-}
-
-a:not([href]):not([tabindex]):focus {
-	outline: 0;
-}
-
-a:focus,
-a:active:focus,
-a:hover {
-	outline: none;
-}
-
 pre,
 code,
 kbd,
@@ -235,6 +202,10 @@ label {
 }
 
 button {
+	background: inherit;
+	border: inherit;
+	color: inherit;
+	padding: inherit;
 	border-radius: 0;
 	outline: none;
 }
@@ -291,6 +262,43 @@ input[type="time"],
 input[type="datetime-local"],
 input[type="month"] {
 	-webkit-appearance: listbox;
+}
+
+a,
+button {
+	color: $tertiary-color;
+	text-decoration: none;
+	background-color: transparent;
+	cursor: pointer;
+	-webkit-text-decoration-skip: objects;
+	&:hover {
+		color: $tertiary-color;
+		text-decoration: underline;
+	}
+
+	&:focus,
+	&:active:focus,
+	&:hover {
+		outline: none;
+	}
+}
+
+a {
+	&:not([href]):not([tabindex]) {
+		color: inherit;
+		text-decoration: none;
+		cursor: auto;
+	}
+
+	&:not([href]):not([tabindex]):hover,
+	&:not([href]):not([tabindex]):focus {
+		color: inherit;
+		text-decoration: none;
+	}
+
+	&:not([href]):not([tabindex]):focus {
+		outline: 0;
+	}
 }
 
 textarea {
