--- a/src/app/sections/trust-pilot/trust-pilot.component.html
+++ b/src/app/sections/trust-pilot/trust-pilot.component.html
@@ -9,6 +9,6 @@
 <span class="text" *ngIf="trustPilot.averageStars >= 8 && trustPilot.averageStars < 10">Eccellente</span>
 <span class="text" *ngIf="trustPilot.averageStars >= 6 && trustPilot.averageStars < 8">Buono</span>
 <span class="text" *ngIf="trustPilot.averageStars >= 4 && trustPilot.averageStars < 6">Medio</span>
-<span class="text" *ngIf="trustPilot.averageStars >= 2 && trustPilot.averageStars < 4">Basso</span>
+<span class="text" *ngIf="trustPilot.averageStars >= 2 && trustPilot.averageStars < 4">Scarso</span>
 <span class="text" *ngIf="trustPilot.averageStars >= 0 && trustPilot.averageStars < 2">Pessimo</span>
 </span>
