--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $light-color: #fafafa;
 $border-color: #e0e0e0;
 $alert-color: #c00;
 $star-color: #fcb851;
+$day-available-color: #e0e0e0;
 
 $rate-excellent: #72b244;
 $rate-good: #72b244;
