--- a/src/app/pages/hotel/hotel.component.scss
+++ b/src/app/pages/hotel/hotel.component.scss
@@ -34,10 +34,13 @@ Hotel Sidebar
 		position: -webkit-sticky;
 		position: sticky;
 		top: 3px;
-		max-height: calc(100vh - 6px);
-		overflow-y: auto;
 		width: calc(100% + 15px);
 		padding-right: 15px;
+		/*
+		max-height: calc(100vh - 6px);
+		overflow-y: auto;
+		*/
+		z-index: 10;
 
 		&::-webkit-scrollbar {
 			width: 3px;
@@ -134,8 +137,114 @@ Hotel Sidebar
 		}
 	}
 
+	.loader {
+		display: block;
+		position: relative;
+		width: 100%;
+		padding: 14px;
+		text-align: center;
+		color: #fff;
+		text-transform: uppercase;
+		font-weight: 600;
+
+		background: linear-gradient(229deg, #f47c22, #1677c0);
+		background-size: 400% 400%;
+
+		animation: loading 5s ease infinite;
+
+		.spinner {
+			position: absolute;
+			right: 25px;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+
+	}
+
 }
 
+@-webkit-keyframes loading {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 51%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes loading {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 51%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+$spinner-size: 2.5em;
+
+.spinner {
+
+	font-size: 2px;
+	display: inline-block;
+	position: relative;
+	color: #ffffff;
+	margin: $spinner-size * -1 auto auto auto;
+	text-indent: -9999em;
+	transform: translateZ(0);
+	animation-delay: -0.16s;
+
+	&,
+	&:before,
+	&:after {
+		border-radius: 50%;
+		width: $spinner-size;
+		height: $spinner-size;
+		animation-fill-mode: both;
+		animation: spinner 1.8s infinite ease-in-out;
+	}
+
+	&:before,
+	&:after {
+		content: '';
+		position: absolute;
+	}
+	&:before {
+		left: $spinner-size * -1.5;
+		animation-delay: -0.32s;
+	}
+	&:after {
+		left: $spinner-size * 1.5;
+	}
+}
+
+@-webkit-keyframes spinner {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
+	}
+	40% {
+		box-shadow: 0 $spinner-size 0 0;
+	}
+}
+
+@keyframes spinner {
+	0%,
+	80%,
+	100% {
+		box-shadow: 0 $spinner-size 0 $spinner-size * -0.5;
+	}
+	40% {
+		box-shadow: 0 $spinner-size 0 0;
+	}
+}
 
 /*--------------------------------------------------
 Hotel Main Content
@@ -190,15 +299,6 @@ Hotel Head
 
 		@include xs-down {
 			font-size: 12px;
-		}
-	}
-
-	.hotel-trust {
-		margin-top: 10px;
-
-		.text {
-			display: inline-block;
-			margin-left: 4px;
 		}
 	}
 
