--- a/src/app/sections/header/header.component.scss
+++ b/src/app/sections/header/header.component.scss
@@ -129,6 +129,7 @@ Header
 				justify-content: space-between;
 				height: 100%;
 				cursor: pointer;
+				text-decoration: none;
 
 				&--bars {
 					margin: 0 auto;
