--- a/src/app/pages/hotel/hotel-datepicker.component.scss
+++ b/src/app/pages/hotel/hotel-datepicker.component.scss
@@ -1,5 +1,10 @@
 @import "~scss/variables";
 
+.hotel-datepicker {
+	position: relative;
+	z-index: 1;
+}
+
 .edit-row {
 	margin-bottom: 5px;
 	display: flex;
@@ -10,10 +15,12 @@
 
 .edit-name {
 	display: inline-block;
+
 	input {
 		border: 0;
 		outline: none;
 		max-width: 120px;
+		background: transparent;
 	}
 }
 
@@ -23,12 +30,8 @@
 }
 
 .popup-calendar {
-	position: absolute;
-	top: 0;
-	left: 100%;
-	width: 300px;
+	width: 100%;
 	height: 300px;
-	z-index: 100;
 	background: white;
 	border: 1px solid $primary-color;
 }
