--- a/src/app/pages/serp/serp-list.component.scss
+++ b/src/app/pages/serp/serp-list.component.scss
@@ -5,6 +5,10 @@
 	width: calc(100% - 310px);
 	max-width: calc(100% - 310px);
 	padding-right: 15px;
+
+	@include sm-down {
+		padding-right: 0;
+	}
 }
 
 .head {
