--- a/src/app/sections/trust-pilot/trust-pilot.component.scss
+++ b/src/app/sections/trust-pilot/trust-pilot.component.scss
@@ -8,6 +8,13 @@ Hotel Trust
 
 	font-size: 10px;
 	text-transform: uppercase;
+	text-align: right;
+	margin-top: 3px;
+
+	@include xs-down {
+		text-align: left;
+		display: block;
+	}
 
 	.number {
 		display: inline-block;
@@ -18,6 +25,11 @@ Hotel Trust
 	.text {
 		display: inline-block;
 		margin-left: 4px;
+
+		@include xs-down {
+			display: inline-block;
+			margin-left: 4px;
+		}
 	}
 
 	&.excellent {
@@ -69,22 +81,24 @@ Hotel Trust
 
 :host {
 
-    .hotel-item & {
-       text-align: right;
-        // margin-top: 3px;
+	.hotel-item & {
+		text-align: right; // margin-top: 3px;
+		.text {
+			display: block;
 
-        .text {
-            display: block;
-        }
-    }
+			@include xs-down {
+				display: inline-block;
+			}
+		}
+	}
 
-    .hotel-head & {
+	.hotel-head & {
 		margin-top: 10px;
 
 		.text {
 			display: inline-block;
 			margin-left: 4px;
 		}
-    }
+	}
 
 }
