--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 	<section-value-proposition></section-value-proposition>
 	<section-footer></section-footer>
 	<section-svg></section-svg>
+	<modal-component>modal component</modal-component>
 </div>
