--- a/src/app/pages/serp/serp-item.component.scss
+++ b/src/app/pages/serp/serp-item.component.scss
@@ -21,7 +21,7 @@
 			left: 0;
 			height: 3px;
 			width: 100%;
-			background: url(assets/img/top.png) no-repeat center;
+			background: url('/assets/img/top.png') no-repeat center;
 			background-size: 100% 3px;
 		}
 
